Add email rate limiting service and hookup to UserService. Resolves #70