@@ -2,11 +2,13 @@ package us.calubrecht.lazerwiki.controller;
 
 import jakarta.mail.MessagingException;
 import jakarta.servlet.http.HttpServletRequest;
+
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.security.Principal;
 import java.util.Map;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -16,71 +18,74 @@ import us.calubrecht.lazerwiki.model.UserRequest;
 import us.calubrecht.lazerwiki.responses.SaveEmailResponse;
 import us.calubrecht.lazerwiki.responses.SetPasswordResponse;
 import us.calubrecht.lazerwiki.service.UserService;
+import us.calubrecht.lazerwiki.service.exception.RateLimitException;
 import us.calubrecht.lazerwiki.service.exception.VerificationException;
 
 @RestController
 @RequestMapping("api/users/")
 public class UserSettingsController {
 
-  @Autowired UserService userService;
+    @Autowired
+    UserService userService;
 
-  @PostMapping("setPassword")
-  public ResponseEntity<SetPasswordResponse> setPassword(
-      Principal principal, @RequestBody UserRequest passwordRequest) {
-    User user = userService.getUser(principal.getName());
-    if (!user.userName.equals(passwordRequest.userName())) {
-      return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+    @PostMapping("setPassword")
+    public ResponseEntity<SetPasswordResponse> setPassword(Principal principal, @RequestBody UserRequest passwordRequest) {
+        User user = userService.getUser(principal.getName());
+        if (!user.userName.equals(passwordRequest.userName())) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
+        userService.resetPassword(user.userName, passwordRequest.password(), user);
+        return ResponseEntity.ok(new SetPasswordResponse(true, ""));
     }
-    userService.resetPassword(user.userName, passwordRequest.password(), user);
-    return ResponseEntity.ok(new SetPasswordResponse(true, ""));
-  }
 
-  @PostMapping("resetForgottenPassword")
-  public ResponseEntity<SetPasswordResponse> setPassword(
-      @RequestBody UserRequest passwordRequest, HttpServletRequest request)
-      throws MalformedURLException, MessagingException {
-    URL url = URI.create(request.getRequestURL().toString()).toURL();
-    userService.requestResetForgottenPassword(
-        passwordRequest.userName(),
-        url.getHost(),
-        passwordRequest.email(),
-        passwordRequest.password());
-    return ResponseEntity.ok(new SetPasswordResponse(true, ""));
-  }
-
-  @PostMapping("saveEmail")
-  public ResponseEntity<SaveEmailResponse> saveEmail(
-      Principal principal, @RequestBody UserRequest emailRequest, HttpServletRequest request)
-      throws MalformedURLException, MessagingException {
-    URL url = URI.create(request.getRequestURL().toString()).toURL();
-    User user = userService.getUser(principal.getName());
-    if (!user.userName.equals(emailRequest.userName())) {
-      return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+    @PostMapping("resetForgottenPassword")
+    public ResponseEntity<SetPasswordResponse> setPassword(@RequestBody UserRequest passwordRequest,  HttpServletRequest request) throws MalformedURLException, MessagingException {
+        try {
+            URL url = new URL(request.getRequestURL().toString());
+            userService.requestResetForgottenPassword(passwordRequest.userName(), url.getHost(), passwordRequest.email(), passwordRequest.password());
+            return ResponseEntity.ok(new SetPasswordResponse(true, ""));
+        } catch (RateLimitException rle) {
+            String message = String.format("Too many password reset requests. Please try again in %d seconds.", rle.getSecondsRemaining());
+            return ResponseEntity.status(HttpStatus.TOO_MANY_REQUESTS).body(new SetPasswordResponse(false, message));
+        }
     }
-    userService.requestSetEmail(user.userName, url.getHost(), emailRequest.email());
-    return ResponseEntity.ok(new SaveEmailResponse(true, ""));
-  }
 
-  @PostMapping("verifyEmailToken")
-  public ResponseEntity<SaveEmailResponse> verifyEmailToken(
-      Principal principal, @RequestBody String token) {
-    User user = userService.getUser(principal.getName());
-    try {
-      userService.verifyEmailToken(user.userName, token);
-      return ResponseEntity.ok(new SaveEmailResponse(true, ""));
-    } catch (VerificationException ve) {
-      return ResponseEntity.ok(new SaveEmailResponse(false, ve.getMessage()));
+    @PostMapping("saveEmail")
+    public ResponseEntity<SaveEmailResponse> saveEmail(Principal principal, @RequestBody UserRequest emailRequest, HttpServletRequest request) throws MalformedURLException, MessagingException {
+        User user = userService.getUser(principal.getName());
+        if (!user.userName.equals(emailRequest.userName())) {
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).build();
+        }
+        try {
+            URL url = new URL(request.getRequestURL().toString());
+            userService.requestSetEmail(user.userName, url.getHost(), emailRequest.email());
+            return ResponseEntity.ok(new SaveEmailResponse(true, ""));
+        } catch (RateLimitException rle) {
+            String message = String.format("Email change requested too recently. Please try again in %d seconds.", rle.getSecondsRemaining());
+            return ResponseEntity.status(HttpStatus.TOO_MANY_REQUESTS).body(new SaveEmailResponse(false, message));
+        }
     }
-  }
 
-  @PostMapping("verifyPasswordToken")
-  public ResponseEntity<SaveEmailResponse> verifyPasswordToken(
-      @RequestBody Map<String, String> request) {
-    try {
-      userService.verifyPasswordToken(request.get("username"), request.get("token"));
-      return ResponseEntity.ok(new SaveEmailResponse(true, ""));
-    } catch (VerificationException ve) {
-      return ResponseEntity.ok(new SaveEmailResponse(false, ve.getMessage()));
+    @PostMapping("verifyEmailToken")
+    public ResponseEntity<SaveEmailResponse> verifyEmailToken(
+            Principal principal, @RequestBody String token) {
+        User user = userService.getUser(principal.getName());
+        try {
+            userService.verifyEmailToken(user.userName, token);
+            return ResponseEntity.ok(new SaveEmailResponse(true, ""));
+        } catch (VerificationException ve) {
+            return ResponseEntity.ok(new SaveEmailResponse(false, ve.getMessage()));
+        }
     }
-  }
+
+    @PostMapping("verifyPasswordToken")
+    public ResponseEntity<SaveEmailResponse> verifyPasswordToken(
+            @RequestBody Map<String, String> request) {
+        try {
+            userService.verifyPasswordToken(request.get("username"), request.get("token"));
+            return ResponseEntity.ok(new SaveEmailResponse(true, ""));
+        } catch (VerificationException ve) {
+            return ResponseEntity.ok(new SaveEmailResponse(false, ve.getMessage()));
+        }
+    }
 }
